--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -46,7 +46,8 @@
     -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
-    background-color: transparent;
+   // background-color: transparent;
+   opacity: 0.9;
     .navbar-brand {
       font-size: 1.75em;
       -webkit-transition: all 0.3s;
