--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -3,3 +3,12 @@
   margin: 15px 0;
   text-transform: none;
 }
+
+.jquery {
+  position: relative;
+  top:32px;
+}
+
+.technology-pad{
+  padding-bottom: 20px;
+}
