--- a/css/agency.css
+++ b/css/agency.css
@@ -226,6 +226,15 @@ header.masthead .intro-text .intro-heading {
   text-transform: none;
 }
 
+.jquery {
+  position: relative;
+  top: 32px;
+}
+
+.technology-pad {
+  padding-bottom: 20px;
+}
+
 #portfolio .portfolio-item {
   right: 0;
   margin: 0 0 15px;
