--- a/css/agency.css
+++ b/css/agency.css
@@ -232,7 +232,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .technology-pad {
-  padding-bottom: 20px;
+  padding: 20px;
 }
 
 #portfolio .portfolio-item {
