--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -142,3 +142,13 @@
 
   }
 }
+
+.bg-portfolio {
+  // background-image: url('../img/img-noise-361x370.png');
+  background-image: url('../img/maple.jpg');
+  background-image: url('../img/pattern_images/6.jpg');
+  background-image: url('../img/PNGs/Melamine-wood-002.png');
+  //background-image: url('../img/wood_1/wood_1.png');
+  
+
+}
