--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -3,6 +3,7 @@ header.masthead {
   text-align: center;
   color: white;
   background-image: url('../img/header-bg5.jpg');
+  height: 100vh;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
