--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -4,6 +4,7 @@ header.masthead {
   color: white;
   background-image: url('../img/header-bg5.jpg');
   height: 100vh;
+  min-height: 800px;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
