--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,8 +14,10 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
+
 //$primary: #fed136 !default;
 
 //$primary: #9ecf18 !default;
 
 $primary: #ff6b26 !default;
+$secondary: sandybrown;
