--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,8 +1,9 @@
 // Styling for the portfolio section
 #portfolio {
   .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
+     right: 0;
+     // margin: 0 0 15px;
+    margin-bottom: 15px;
     .portfolio-link {
       position: relative;
       display: block;
@@ -62,6 +63,7 @@
     z-index: 2;
   }
 }
+
 
 .portfolio-heading {
   color: $secondary;
