--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -86,7 +86,7 @@
   .modal-content {
     padding: 100px 0;
     text-align: center;
-    background-image: url('../img/PNGs/Melamine-wood-001.png');
+    background-image: url('../img/wood-light.png');
     h2 {
       font-size: 3em;
       margin-bottom: 15px;
@@ -152,7 +152,5 @@
 }
 
 .bg-portfolio {
-  //background-image: url('../img/PNGs/Melamine-wood-002.png');
-  background-image: url('../img/wood_1/wood_1.png');
- // background-image: url('../img/wood_1/wood_dark.png');
+  background-image: url('../img/wood-dark.png');
 }
