--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -14,5 +14,5 @@
 }
 
 .bg-techno {
-  background-image: url('../img/PNGs/Melamine-wood-001.png');
+  background-image: url('../img/wood-light.png');
 }
