--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -178,5 +178,5 @@
 }
 
 .bg-timeline {
-    background-image: url('../img/PNGs/Melamine-wood-001.png');
+    background-image: url('../img/wood-light.png');
 }
