--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -22,6 +22,6 @@
 }
 
 .bg-team {
-  background-image: url('../img/PNGs/Melamine-wood-004.png');
-  background-image: url('../img/wood_1/wood_1.png');
+
+  background-image: url('../img/wood-dark.png');
 }
