social,  mail and stuff

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -60,3 +60,11 @@ section#contact {
   background-repeat: repeat;
   background-position: center;
 }
+
+.under-line {
+  background-image: url('../img/wood-light.png');
+  height:100%;
+  width: 100%;
+  background-repeat: repeat;
+  background-position: center;
+}
