--- a/css/agency.css
+++ b/css/agency.css
@@ -701,6 +701,14 @@ section#contact :-ms-input-placeholder {
   background-position: center;
 }
 
+.under-line {
+  background-image: url("../img/wood-light.png");
+  height: 100%;
+  width: 100%;
+  background-repeat: repeat;
+  background-position: center;
+}
+
 footer {
   padding: 25px 0;
   text-align: center;
